interim.
Invert join protocol. Future contacts past. Revive ASSEMBLE block.

Dear lord.