@@ -10,8 +10,6 @@ import com.chiralbehaviors.tron.Fsm;
 import com.google.common.collect.HashMultiset;
 import com.google.common.collect.Multiset;
 import com.google.common.collect.Sets;
-import com.salesforce.apollo.archipelago.RouterImpl.CommonCommunications;
-import com.salesforce.apollo.choam.comm.Terminal;
 import com.salesforce.apollo.choam.fsm.Reconfiguration;
 import com.salesforce.apollo.choam.fsm.Reconfiguration.Reconfigure;
 import com.salesforce.apollo.choam.fsm.Reconfiguration.Transitions;
@@ -21,26 +19,24 @@ import com.salesforce.apollo.cryptography.JohnHancock;
 import com.salesforce.apollo.cryptography.proto.Digeste;
 import com.salesforce.apollo.cryptography.proto.PubKey;
 import com.salesforce.apollo.membership.Member;
-import com.salesforce.apollo.ring.SliceIterator;
-import com.salesforce.apollo.utils.Utils;
+import io.grpc.StatusRuntimeException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.security.PublicKey;
-import java.time.Duration;
-import java.util.*;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentSkipListMap;
-import java.util.concurrent.Executors;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
 import static com.salesforce.apollo.choam.ViewContext.print;
 import static com.salesforce.apollo.cryptography.QualifiedBase64.publicKey;
 import static com.salesforce.apollo.cryptography.QualifiedBase64.signature;
+import static io.grpc.Status.ABORTED;
 
 /**
  * View reconfiguration. Attempts to create a new view reconfiguration. The protocol comes to an agreement on the
@@ -53,26 +49,23 @@ import static com.salesforce.apollo.cryptography.QualifiedBase64.signature;
  */
 public class ViewAssembly {
 
-    private final static Logger                            log           = LoggerFactory.getLogger(ViewAssembly.class);
-    protected final      Transitions                       transitions;
-    private final        AtomicBoolean                     cancelSlice   = new AtomicBoolean();
-    private final        Digest                            nextViewId;
-    private final        Map<Digest, Views>                viewProposals = new ConcurrentHashMap<>();
-    private final        Map<Digest, SignedViewMember>     proposals     = new ConcurrentHashMap<>();
-    private final        Consumer<Assemblies>              publisher;
-    private final        Map<Digest, Join>                 slate         = new HashMap<>();
-    private final        ViewContext                       view;
-    private final        CommonCommunications<Terminal, ?> comms;
-    private final        Set<Digest>                       polled        = Collections.newSetFromMap(
-    new ConcurrentSkipListMap<>());
-    private volatile     View                              selected;
+    private final static Logger                        log           = LoggerFactory.getLogger(ViewAssembly.class);
+    protected final      Transitions                   transitions;
+    private final        Digest                        nextViewId;
+    private final        Map<Digest, Views>            viewProposals = new ConcurrentHashMap<>();
+    private final        Map<Digest, SignedViewMember> proposals     = new ConcurrentHashMap<>();
+    private final        Consumer<Assemblies>          publisher;
+    private final        Map<Digest, Join>             slate         = new HashMap<>();
+    private final        ViewContext                   view;
+    private final        CompletableFuture<View>       onConsensus;
+    private volatile     View                          selected;
 
     public ViewAssembly(Digest nextViewId, ViewContext vc, Consumer<Assemblies> publisher,
-                        CommonCommunications<Terminal, ?> comms) {
+                        CompletableFuture<View> onConsensus) {
         view = vc;
         this.nextViewId = nextViewId;
         this.publisher = publisher;
-        this.comms = comms;
+        this.onConsensus = onConsensus;
 
         final Fsm<Reconfiguration, Transitions> fsm = Fsm.construct(new Recon(), Transitions.class,
                                                                     Reconfigure.AWAIT_ASSEMBLY, true);
@@ -88,13 +81,6 @@ public class ViewAssembly {
 
     public void start() {
         transitions.fsm().enterStartState();
-    }
-
-    public void stop() {
-        cancelSlice.set(true);
-    }
-
-    void assembled() {
         transitions.assembled();
     }
 
@@ -105,7 +91,12 @@ public class ViewAssembly {
             transitions.failed();
             return;
         }
-        cancelSlice.set(true);
+        if (proposals.size() < selected.majority) {
+            log.info("Cannot complete view assembly: {} proposed: {} required: {} on: {}", nextViewId,
+                     proposals.keySet().stream().toList(), selected.majority, params().member().getId());
+            transitions.failed();
+            return;
+        }
         // Fill out the proposals with the unreachable members of the next assembly
         Sets.difference(selected.assembly.keySet(), proposals.keySet())
             .forEach(m -> proposals.put(m, SignedViewMember.newBuilder()
@@ -115,14 +106,85 @@ public class ViewAssembly {
                                                            .build()));
         log.debug("View Assembly: {} completed with: {} members on: {}", nextViewId, slate.size(),
                   params().member().getId());
-    }
-
-    void finalElection() {
         transitions.complete();
     }
 
     Consumer<List<Assemblies>> inbound() {
         return lre -> lre.forEach(this::assemble);
+    }
+
+    boolean join(SignedViewMember svm, boolean direct) {
+        final var mid = Digest.from(svm.getVm().getId());
+        final var m = selected.assembly.get(mid);
+        if (m == null) {
+            if (log.isTraceEnabled()) {
+                log.trace("Invalid view member: {} on: {}", print(svm, params().digestAlgorithm()),
+                          params().member().getId());
+            }
+            throw new StatusRuntimeException(ABORTED);
+        }
+        var viewId = Digest.from(svm.getVm().getView());
+        if (!nextViewId.equals(viewId)) {
+            if (log.isTraceEnabled()) {
+                log.trace("Invalid view id for member: {} on: {}", print(svm, params().digestAlgorithm()),
+                          params().member().getId());
+            }
+            return false;
+        }
+        if (log.isDebugEnabled()) {
+            log.debug("Join of: {} on: {}", print(svm, params().digestAlgorithm()), params().member().getId());
+        }
+
+        if (!m.verify(JohnHancock.from(svm.getSignature()), svm.getVm().toByteString())) {
+            if (log.isTraceEnabled()) {
+                log.trace("Invalid signature for view member: {} on: {}", print(svm, params().digestAlgorithm()),
+                          params().member().getId());
+            }
+            return false;
+        }
+
+        PubKey encoded = svm.getVm().getConsensusKey();
+
+        if (!m.verify(signature(svm.getVm().getSignature()), encoded.toByteString())) {
+            if (log.isTraceEnabled()) {
+                log.trace("Could not verify consensus key from view member: {} on: {}",
+                          print(svm, params().digestAlgorithm()), params().member().getId());
+            }
+            return false;
+        }
+
+        PublicKey consensusKey = publicKey(encoded);
+        if (consensusKey == null) {
+            if (log.isTraceEnabled()) {
+                log.trace("Could not deserialize consensus key from view member: {} on: {}",
+                          print(svm, params().digestAlgorithm()), params().member().getId());
+            }
+            return false;
+        }
+        if (proposals.putIfAbsent(mid, svm) == null) {
+            if (direct) {
+                var signature = view.sign(svm);
+                publisher.accept(Assemblies.newBuilder()
+                                           .addJoins(SignedJoin.newBuilder()
+                                                               .setJoin(svm)
+                                                               .setMember(params().member().getId().toDigeste())
+                                                               .setSignature(signature.toSig())
+                                                               .build())
+                                           .build());
+                if (log.isTraceEnabled()) {
+                    log.trace("Publishing view member: {} sig: {} on: {}", print(svm, params().digestAlgorithm()),
+                              params().digestAlgorithm().digest(signature.toSig().toByteString()),
+                              params().member().getId());
+                }
+            } else if (log.isTraceEnabled()) {
+                log.trace("Adding discovered view member: {} on: {}", print(svm, params().digestAlgorithm()),
+                          params().member().getId());
+            }
+        }
+        if (proposals.size() == selected.assembly.size()) {
+            Thread.ofVirtual().start(transitions::gathered);
+        }
+        return true;
     }
 
     private void assemble(Assemblies ass) {
@@ -134,9 +196,9 @@ public class ViewAssembly {
         }
         for (SignedViews svs : ass.getViewsList()) {
             if (view.validate(svs)) {
-                log.info("Adding views: {} from: {}",
+                log.info("Adding views: {} from: {} on: {}",
                          svs.getViews().getViewsList().stream().map(v -> Digest.from(v.getDiadem())).toList(),
-                         Digest.from(svs.getViews().getMember()));
+                         Digest.from(svs.getViews().getMember()), params().member().getId());
                 viewProposals.put(Digest.from(svs.getViews().getMember()), svs.getViews());
             } else {
                 log.info("Invalid views: {} from: {} on: {}",
@@ -151,7 +213,7 @@ public class ViewAssembly {
         var last = view.pendingViews().last();
         return committee.stream()
                         .map(d -> last.context().getMember(Digest.from(d)))
-                        .collect(Collectors.toMap(m -> m.getId(), m -> m));
+                        .collect(Collectors.toMap(Member::getId, m -> m));
     }
 
     private void castVote() {
@@ -186,122 +248,6 @@ public class ViewAssembly {
         }
     }
 
-    private void completeSlice(Duration retryDelay, AtomicReference<Runnable> reiterate) {
-        if (gathered()) {
-            return;
-        }
-
-        log.trace("Proposal incomplete of: {} polled: {}, total: {}  retrying: {} on: {}", nextViewId,
-                  polled.stream().sorted().toList(), selected.assembly.size(), retryDelay, params().member().getId());
-        if (!cancelSlice.get()) {
-            Executors.newScheduledThreadPool(1, Thread.ofVirtual().factory())
-                     .schedule(() -> Thread.ofVirtual().start(Utils.wrapped(reiterate.get(), log)),
-                               retryDelay.toNanos(), TimeUnit.NANOSECONDS);
-        }
-    }
-
-    private boolean consider(Optional<SignedViewMember> futureSailor, Terminal term, Member m) {
-        if (futureSailor.isEmpty()) {
-            return !gathered();
-        }
-        SignedViewMember signedViewMember;
-        signedViewMember = futureSailor.get();
-        if (signedViewMember.equals(SignedViewMember.getDefaultInstance())) {
-            log.debug("Empty join response from: {} on: {}", term.getMember().getId(), params().member().getId());
-            return !gathered();
-        }
-        var vm = new Digest(signedViewMember.getVm().getId());
-        if (!m.getId().equals(vm)) {
-            log.debug("Invalid join response from: {} expected: {} on: {}", term.getMember().getId(), vm,
-                      params().member().getId());
-            return !gathered();
-        }
-        log.debug("Join reply: {} on: {}", print(signedViewMember, params().digestAlgorithm()),
-                  params().member().getId());
-        join(signedViewMember, true);
-        return !gathered();
-    }
-
-    private boolean gathered() {
-        if (polled.size() == selected.assembly.size()) {
-            log.trace("Polled all +");
-            cancelSlice.set(true);
-            return true;
-        }
-        return false;
-    }
-
-    private void join(SignedViewMember svm, boolean direct) {
-        final var mid = Digest.from(svm.getVm().getId());
-        final var m = selected.assembly.get(mid);
-        if (m == null) {
-            if (log.isTraceEnabled()) {
-                log.trace("Invalid view member: {} on: {}", print(svm, params().digestAlgorithm()),
-                          params().member().getId());
-            }
-            return;
-        }
-        var viewId = Digest.from(svm.getVm().getView());
-        if (!nextViewId.equals(viewId)) {
-            if (log.isTraceEnabled()) {
-                log.trace("Invalid view id for member: {} on: {}", print(svm, params().digestAlgorithm()),
-                          params().member().getId());
-            }
-            return;
-        }
-        if (log.isDebugEnabled()) {
-            log.debug("Join of: {} on: {}", print(svm, params().digestAlgorithm()), params().member().getId());
-        }
-
-        if (!m.verify(JohnHancock.from(svm.getSignature()), svm.getVm().toByteString())) {
-            if (log.isTraceEnabled()) {
-                log.trace("Invalid signature for view member: {} on: {}", print(svm, params().digestAlgorithm()),
-                          params().member().getId());
-            }
-            return;
-        }
-
-        PubKey encoded = svm.getVm().getConsensusKey();
-
-        if (!m.verify(signature(svm.getVm().getSignature()), encoded.toByteString())) {
-            if (log.isTraceEnabled()) {
-                log.trace("Could not verify consensus key from view member: {} on: {}",
-                          print(svm, params().digestAlgorithm()), params().member().getId());
-            }
-            return;
-        }
-
-        PublicKey consensusKey = publicKey(encoded);
-        if (consensusKey == null) {
-            if (log.isTraceEnabled()) {
-                log.trace("Could not deserialize consensus key from view member: {} on: {}",
-                          print(svm, params().digestAlgorithm()), params().member().getId());
-            }
-            return;
-        }
-        polled.add(mid);
-        if (proposals.putIfAbsent(mid, svm) == null) {
-            if (direct) {
-                var signature = view.sign(svm);
-                publisher.accept(Assemblies.newBuilder()
-                                           .addJoins(SignedJoin.newBuilder()
-                                                               .setJoin(svm)
-                                                               .setMember(params().member().getId().toDigeste())
-                                                               .setSignature(signature.toSig())
-                                                               .build())
-                                           .build());
-                if (log.isTraceEnabled()) {
-                    log.trace("Publishing view member: {} sig: {} on: {}", print(svm, params().digestAlgorithm()),
-                              params().digestAlgorithm().digest(signature.toSig().toByteString()),
-                              params().member().getId());
-                }
-            } else if (log.isTraceEnabled()) {
-                log.trace("Adding discovered view member: {} on: {}", print(svm, params().digestAlgorithm()),
-                          params().member().getId());
-            }
-        }
-    }
-
     private Parameters params() {
         return view.params();
     }
@@ -313,7 +259,7 @@ public class ViewAssembly {
         var majorities = candidates.entrySet()
                                    .stream()
                                    .filter(e -> e.getCount() >= majority)
-                                   .map(e -> e.getElement())
+                                   .map(Multiset.Entry::getElement)
                                    .toList();
         if (majorities.isEmpty()) {
             log.info("No majority views: {} on: {}", candidates.entrySet()
@@ -328,15 +274,13 @@ public class ViewAssembly {
                       params().member().getId());
         }
         Multiset<com.salesforce.apollo.choam.proto.View> consensus = HashMultiset.create();
-        viewProposals.values().forEach(vs -> {
-            castVote(vs, majorities, consensus);
-        });
+        viewProposals.values().forEach(vs -> castVote(vs, majorities, consensus));
         var ratification = consensus.entrySet()
                                     .stream()
                                     .filter(e -> e.getCount() >= majority)
                                     .map(Multiset.Entry::getElement)
                                     .sorted(Comparator.comparing(view -> Digest.from(view.getDiadem())))
-                                    .collect(Collectors.toList());
+                                    .toList();
         if (consensus.isEmpty()) {
             log.debug("No consensus views on: {}", params().member().getId());
             return;
@@ -345,21 +289,16 @@ public class ViewAssembly {
                       params().member().getId());
         }
         var winner = ratification.getFirst();
-        selected = new View(Digest.from(winner.getDiadem()), assemblyOf(winner.getCommitteeList()));
+        selected = new View(Digest.from(winner.getDiadem()), assemblyOf(winner.getCommitteeList()),
+                            winner.getMajority());
         if (log.isDebugEnabled()) {
             log.debug("Selected: {} on: {}", selected, params().member().getId());
         }
+        onConsensus.complete(selected);
         transitions.viewDetermined();
     }
 
-    private record View(Digest diadem, Map<Digest, Member> assembly) {
-        public View(CHOAM.PendingView view, Digest viewId) {
-            this(view.diadem(), Committee.viewMembersOf(viewId, view.context())
-                                         .stream()
-                                         .collect(Collectors.toMap(Member::getId, m -> m)));
-
-        }
-
+    record View(Digest diadem, Map<Digest, Member> assembly, int majority) {
         @Override
         public String toString() {
             return "View{" + "diadem=" + diadem + ", assembly=" + assembly.keySet().stream().sorted().toList() + '}';
@@ -367,18 +306,21 @@ public class ViewAssembly {
     }
 
     private class Recon implements Reconfiguration {
-
         @Override
         public void certify() {
-            if (proposals.size() == selected.assembly.size()) {
-                cancelSlice.set(true);
-                log.debug("Certifying: {} required: {} of: {} slate: {}  on: {}", nextViewId, selected.assembly.size(),
+            if (proposals.size() >= selected.majority) {
+                log.debug("Certifying: {} majority: {} of: {} slate: {}  on: {}", nextViewId, selected.majority,
                           nextViewId, proposals.keySet().stream().sorted().toList(), params().member().getId());
+
+                proposals.forEach((key, value) -> {
+                    slate.put(key, joinOf(value));
+                });
+                log.debug("Electing view: {} slate: {} on: {}", nextViewId, slate.keySet().stream().sorted().toList(),
+                          params().member().getId());
                 transitions.certified();
             } else {
-                log.debug("Not certifying: {} required: {} slate: {} of: {} on: {}", nextViewId,
-                          selected.assembly.size(), proposals.entrySet().stream().sorted().toList(), nextViewId,
-                          params().member().getId());
+                log.debug("Not certifying: {} majority: {} slate: {} of: {} on: {}", nextViewId, selected.majority,
+                          proposals.entrySet().stream().sorted().toList(), nextViewId, params().member().getId());
             }
         }
 
@@ -390,49 +332,21 @@ public class ViewAssembly {
         @Override
         public void elect() {
             if (selected != null && proposals.size() == selected.assembly().size()) {
-                proposals.entrySet().forEach(e -> slate.put(e.getKey(), joinOf(e.getValue())));
-                cancelSlice.set(true);
+                proposals.forEach((key, value) -> slate.put(key, joinOf(value)));
                 log.debug("Electing view: {} slate: {} on: {}", nextViewId, slate.keySet().stream().sorted().toList(),
                           params().member().getId());
                 transitions.complete();
             } else {
-                log.error("Failed election, selected: {} required: {} slate: {} of: {} on: {}", selected != null,
-                          view.context().getRingCount(), proposals.keySet().stream().sorted().toList(), nextViewId,
-                          params().member().getId());
+                log.error("Failed election; selected: {} proposed: {} of: {} on: {}", selected != null,
+                          proposals.keySet().stream().sorted().toList(), nextViewId, params().member().getId());
                 transitions.failed();
             }
         }
 
         @Override
         public void failed() {
-            stop();
             view.onFailure();
             log.debug("Failed view assembly for: {} on: {}", nextViewId, params().member().getId());
-        }
-
-        @Override
-        public void gather() {
-            assert selected != null : "Have not selected a view";
-            log.trace("Gathering assembly for: {} on: {}", nextViewId, params().member().getId());
-            AtomicReference<Runnable> reiterate = new AtomicReference<>();
-            var retryDelay = Duration.ofMillis(10);
-            reiterate.set(() -> {
-                var slice = new ArrayList<>(selected.assembly.values());
-                var committee = new SliceIterator<>("Committee for " + nextViewId, params().member(), slice, comms);
-                committee.iterate((term, m) -> {
-                    if (polled.contains(m.getId())) {
-                        return null;
-                    }
-                    log.trace("Requesting Join from: {} on: {}", term.getMember().getId(), params().member().getId());
-                    return term.join(nextViewId);
-                }, ViewAssembly.this::consider, () -> completeSlice(retryDelay, reiterate), params().gossipDuration());
-            });
-            reiterate.get().run();
-        }
-
-        @Override
-        public void nominate() {
-            transitions.nominated();
         }
 
         @Override
